samples/_failures_safe/1761611628_6f0a83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2dfd910e.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_2dfd910e.c:174:15: error: expected ‘;’ at end of input
  174 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_2dfd910e.c:174:9: error: expected declaration or statement at end of input
  174 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_2dfd910e.c:174:9: error: expected declaration or statement at end of input
